--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Zuha LLC",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "dotenv": "^16.4.2"
   }
 }
