--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,21 +13,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Install Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+      - name: Install Netlify CLI
+        run: npm install -g netlify-cli
 
-      - name: Install dependencies
-        run: npm install
-
-      - name: Build the app
-        run: npm run build
-        working-directory: Frontend/my-trade  # Adjust to your actual frontend directory
-
-      - name: Deploy to Netlify
+      - name: Build and deploy to Netlify
         env:
-          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}  # Add this secret in your GitHub repository settings
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}  # Use the secret here
         run: |
-          npm install -g netlify-cli
-          netlify deploy --prod --dir=./Frontend/my-trade/build --auth=$NETLIFY_AUTH_TOKEN
+          npm install
+          npm run build
+          netlify deploy --prod --dir=./build --auth=$NETLIFY_AUTH_TOKEN
