--- a/Frontend/my-trade/.env
+++ b/Frontend/my-trade/.env
@@ -1,4 +1,4 @@
-REACT_APP_REDIRECT_URI=https://3000-zuhakhalida-tradeautoma-022lbzu2306.ws-us114.gitpod.io/
+REACT_APP_REDIRECT_URI=https://automated-upstox.netlify.app/
 REACT_APP_BASE_URL=https://api.upstox.com/v2/login/authorization/dialog
 REACT_APP_SERVER_URL=https://5000-zuhakhalida-tradeautoma-022lbzu2306.ws-us114.gitpod.io/getAccessToken
 REACT_APP_CLIENT_SECRET=etgnuwhlzt
